add some style to  banners

--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,6 +1,8 @@
-<div><a href="{{ site.baseurl }}/">Main</a></div>
-
-<hr>
-<h1>{{ colTitle }}</h1>
-<p> {{ colDescription }}</p>
-<hr>
+<div class="logo">
+    <a href="{{ site.baseurl }}/" title="UI Library Digital Initiatives" ><img id="digleft" src="http://www.lib.uidaho.edu/digital/justdi_logo_sm.png" alt="UI Digital Initiatives logo" ></a>
+    <a href="http://www.lib.uidaho.edu" title="University of Idaho Library"> <img id="libleft" src="http://www.lib.uidaho.edu/digital/justlib_logo_sm.png" alt="UI Library logo" ></a>
+</div>
+<div class="collection-title">
+    <h1>{{ colTitle }}</h1>
+    <p> {{ colDescription }}</p>
+</div>
