--- a/_includes/main-banner.html
+++ b/_includes/main-banner.html
@@ -1,1 +1,7 @@
-<h1>{{ site.title }}</h1>
+<div class="logo">
+    <a href="{{ site.baseurl }}/" title="UI Library Digital Initiatives" ><img id="digleft" src="http://www.lib.uidaho.edu/digital/justdi_logo_sm.png" alt="UI Digital Initiatives logo" ></a>
+    <a href="http://www.lib.uidaho.edu" title="University of Idaho Library"> <img id="libleft" src="http://www.lib.uidaho.edu/digital/justlib_logo_sm.png" alt="UI Library logo" ></a>
+</div>
+<div class="site-title">
+    <h1>{{ site.title }}</h1>
+</div>
