--- a/css/main.scss
+++ b/css/main.scss
@@ -10,12 +10,17 @@
 $base-font: 'Noto Sans', Verdana, Arial, sans-serif;
 
 $base-font-size: 18px;
-$base-font-size-sm: 14px;
-$mobile-font-size: 16px;
+$base-font-size-sm: 12px;
+$mobile-font-size: 14px;
+$base-line-height: 1.25;
+
+$text-color: black;
+$link-color: blue;
+$background-color: white;
 
 /* add scss partials in cascading order */
 @import 
-    "colors",
     "base",
-    "layout"
+    "layout",
+    "header"
 ;
