add leaflet map stuff

--- a/_layouts/collections/table.html
+++ b/_layouts/collections/table.html
@@ -11,8 +11,8 @@ load: table
 
 <table id="item-table"></table>
 
-<link rel="stylesheet" href="{{ site.baseurl }}/css/vanilla-dataTables.min.css" type="text/css">
-<script src="{{ site.baseurl }}/js/vanilla-dataTables.min.js"></script>
+<link rel="stylesheet" href="{{ site.baseurl }}/js/dataTables/vanilla-dataTables.min.css" type="text/css">
+<script src="{{ site.baseurl }}/js/dataTables/vanilla-dataTables.min.js"></script>
 <script>
     var data = {
         "headings": [
