--- a/_layouts/collections/map.html
+++ b/_layouts/collections/map.html
@@ -4,14 +4,35 @@ layout: default
 {% include collection-variables.html %}
 {% include collection-banner.html %}
 {% include collection-nav.html %}
-
-<h1>a map</h1>
-<p>centered at {{ page.lat }}, {{ page.long }}</p>
-
-<p>with items:</p>
 {% assign items = site.data.collection_metadata.[colName] %}
-<ul>
-{% for item in items %}
-    <li>{{ item.title }}, at {{ item.latitude }}, {{ item.longitude }}</li>
-{% endfor %}
-</ul>
+<h1>a map</h1>
+
+<div id="map" style="height: 500px;"></div>
+<link rel="stylesheet" href="{{ site.baseurl }}/js/leaflet/leaflet.css" type="text/css">
+<script src="{{ site.baseurl }}/js/leaflet/leaflet.js"></script>
+<script>
+/* add geojason data */
+var geodata = { 
+    "type":"FeatureCollection",
+    "features": [
+        {% for item in items %}{% if item.latitude %}{% if item.longitude %}
+        {"type":"Feature","properties":{"title":"{{ item.title }}","description":"{{ item.description }}","date":"{{ item.date }}"},"geometry":{"type":"Point","coordinates":[{{ item.longitude }},{{ item.latitude }}]}}{% if forloop.last != true %},{% endif %}{% endif %}{% endif %}{% endfor %}
+    ]
+}
+/* init and set zoom */
+var map = L.map('map').setView([{{ page.lat }},{{ page.long }}], 16);
+/* load map layer */ 
+L.tileLayer('http://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
+    maxZoom: 20,
+    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+}).addTo(map);
+/* add geojson marker and popup */
+L.geoJson(geodata, {
+    pointToLayer: function(feature,latlng){
+        var marker = L.marker(latlng);
+        marker.bindPopup('<strong>' + feature.properties.title + '</strong><br>'+ feature.properties.date + '<br>' + feature.properties.description ); 
+        return marker;
+    }
+}).addTo(map);
+
+</script>
